# rust-fractal

./: Cargo.toml  README.md  rustfmt.toml
src/: .old_main.rs  canvas.rs  color.rs  event.rs  fractal.rs  main.rs  render.rs
