[package]
name = "fractol"
version = "0.1.0"
authors = ["Tristan Duquesne <duquesne.tristan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "^0.34.5"
polynomials = "^0.2.4"
num-complex = "^0.4.0"
palette = "^0.5.0"